Swamy/14aug coding (#28)
* Changes

* Update S1.md

* Changes

* Changes

* Changes

* Changes

* Changes

* Changes

* Changes

* Changes

--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -1,14 +1,16 @@
-# C# Fundamentals - Session 1
+# C# Fundamentals - Part of Microservices Series - Session 1 of 120
 
-## Date: XX-XXX-2023
+## Date: 14-Aug-2023
+
+## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
+
+![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
 
-> 1. Introduction to Variables
-> 1. Showing Compiler Version `#error version`
-> 1. ilDasm Demo
+> 1. To be decided
 > 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
+> 1. What is next?
 
 ---
 
@@ -16,188 +18,140 @@
 
 ---
 
-**Reference(s):**
+## X. Preparing Folder, Solution, Project(s)
 
-> 1. [https://learn.microsoft.com/en-us/dotnet/core/introduction](https://learn.microsoft.com/en-us/dotnet/core/introduction)
-> 1. [https://en.wikipedia.org/wiki/.NET_Framework_version_history#](https://en.wikipedia.org/wiki/.NET_Framework_version_history#)
-> 1. [https://en.wikipedia.org/wiki/.NET](https://en.wikipedia.org/wiki/.NET)
-> 1. [https://dotnet.microsoft.com/en-us/learn/csharp](https://dotnet.microsoft.com/en-us/learn/csharp)
-> 1. [https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/](https://learn.microsoft.com/en-gb/dotnet/csharp/language-reference/)
-> 1. [https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console](https://learn.microsoft.com/en-gb/dotnet/api/?view=net-7.0&term=System.Console)
-> 1. [https://learn.microsoft.com/en-us/dotnet/](https://learn.microsoft.com/en-us/dotnet/)
-> 1. [https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types](https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/integral-numeric-types)
+### X.X. Create Solution
 
-## 1. What is .NET?
-
-> 1. .NET is a free, cross-platform, open source developer platform for building many different types of applications.
-> 1. With .NET, you can use multiple languages, editors, and libraries to build for web, mobile, desktop, games, and IoT.
-> 1. .NET is supported by Microsoft. Microsoft ships official releases that are built and tested on Microsoft-maintained servers in Azure and supported just like any Microsoft product.
-
-**Reference(s):**
-
-> 1. [https://dotnet.microsoft.com/en-us/learn/dotnet/what-is-dotnet](https://dotnet.microsoft.com/en-us/learn/dotnet/what-is-dotnet)
-
-## 2. .NET History
-
-### 2.1. .NET Framework
-
-> 1. Discussion [https://en.wikipedia.org/wiki/.NET_Framework_version_history#](https://en.wikipedia.org/wiki/.NET_Framework_version_history#)
-
-### 2.2. .NET Core 1.0 to 3.1, and .NET 5/6/7/8 and above
-
-> 1. Discussion [https://en.wikipedia.org/wiki/.NET](https://en.wikipedia.org/wiki/.NET)
-> 1. .NET includes a cross-platform implementation of the CLR known as CoreCLR and a streamlined BCL known as CoreFX.
-> 1. Releases Long Term Support (LTS), Standard Term Support (STS)
-
-## 3. 30,000 foot view of Common Language Runtime (CLR)
-
-> 1. CLR is the virtual machine component of Microsoft's .NET framework and is responsible for managing the execution of .NET programs.
-> 1. It provides core services such as memory management, thread management, and remoting, while also enforcing strict type safety and other forms of code accuracy that promote security and robustness.
-> 1. It is a common language runtime that can be used by many programming languages, such as C#, F#, and Visual Basic.
-
-**Reference(s):**
-
-> 1. [https://learn.microsoft.com/en-us/dotnet/standard/clr](https://learn.microsoft.com/en-us/dotnet/standard/clr)
-> 1. [https://learn.microsoft.com/en-us/dotnet/standard/managed-execution-process](https://learn.microsoft.com/en-us/dotnet/standard/managed-execution-process)
-> 1. [https://en.wikipedia.org/wiki/Common_Language_Runtime](https://en.wikipedia.org/wiki/Common_Language_Runtime)
-
-## 4. C# Language
-
-> 1. C# is a multi-paradigm programming language.
-> 1. Program class is the entry point for every C# application and is required for every C# application.
-> 1. C# is case sensitive. (C# is case sensitive. This means that uppercase and lowercase letters are treated differently.)
-> 1. The Main method is the entry point of a C# application. (There can only be one entry point in a C# program.)
-> 1. Code Indentation is not required in C#. But it is recommended to use proper indentation to make the code more readable.
-> 1. .csproj file is the project file for C# projects. It contains all the information that's required to build your project.
-> 1. .sln file is the solution file for Visual Studio. It contains information about one or more projects.
-> 1. Top-level statements are statements that aren't inside any type or namespace.
-> 1. They are supported in Program.cs file. It should be as part of entry point and one application should have only one entry point.
-> 1. The dot operator (.) is used to access members of a namespace, type, or object.
-> 1. Demos -> ProgramStructureDemo.csproj.
-
-## X. Dotnet CLI Commands
-
-```bash
-dotnet --info
-
-dotnet --list-sdks 
-
-dotnet --list-runtimes 
-
-dotnet --version
-
-dotnet new
-
-dotnet new list
-
-dotnet new --help
+```powershell
+dotnet new sln -n S2
 ```
 
-## X. Common our First C# Program
+### X.X. Copy two projects from S1 folder to S2 folder and add them to the solution
 
-```bash
-dotnet new console -o FirstCSharpProgram --use-program-main
+```powershell
+dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
+
+dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 ```
 
-### X.X. Few Terms
+![Projects And Solution |150x150](./images/S2/S2_With_Old_Projects.PNG)
 
-> 1. A namespace contains types like classes to group them together.
-> 1. A class contains the members of an object, including methods.
-> 1. A method contains statements that implement an action that an object can take.
+### X.X. Create New Console Project, Class Library (VB) and them to the solution S2
 
-## X. Exploring Program Structure
+```powershell
+dotnet new console -o ProgramStructureDemoV3
+dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
-> 1. To be decided
-
-## X. Exploring Project Structure
-
-> 1. .csporj file
-> 1. Program.cs file
-> 1. obj folder - intermediate files
-> 1. bin folder - output files
-
-## X. Common Language Infrastructure (CLI)
-
-> 1. CLI is an open specification developed by Microsoft and standardized by ISO and ECMA that describes executable code and a runtime environment that allows multiple high-level languages to be used on different computer platforms without being rewritten for specific architectures.
-
-**Reference(s):**
-
-> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure](https://en.wikipedia.org/wiki/Common_Language_Infrastructure)
-
----
-
-> 1. .NET CLR, BCL, CoreCLR, CoreFX basics
-
-> 1. Basic .NET CLI commands - Project Templates
-> 1. Few Terms
-> 1. Exploring Program Structure
-> 1. Exploring Project Structure
-> 1. ilDasm Demo
-> 1. Console Application with and without Top Level Statements
->    - 1.1 Without Top Level Statements
->    - 1.2 With Top Level Statements
-> 1. Introduction to Variables
-> 1. SUMMARY / RECAP / Q&A
-> 1. What is next ?
-
-## Few Points
-
-## Next Session
-
-> 1. Top-level statements are statements that aren't inside any type or namespace. They can be used to declare variables and their types, define functions, and define classes.
-
-## 1. Console Application with and without Top Level Statements
-
-> 1. Discussion and Demo
-
-### 1.1 Without Top Level Statements
-
-```bash
-dotnet new console -o demo1 --use-program-main
+dotnet new classlib -o MathServices --language VB
+dotnet sln add .\MathServices\MathServices.vbproj
 ```
 
-![Demo 1 |150x150](./images/1/demo1.PNG)
+![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
 
-### 1.2. With Top Level Statements
+### X.X. Execute the Project(s)
 
-> 1. Top level Statements, will create `Program` class, and `<Main>$()` method
+```powershell
+dotnet build
 
-```bash
-dotnet new console -o demo2
+dotnet run --project .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
+
+dotnet run --project .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
+
+dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ```
+
+![Executing 3 Projects |150x150](./images/S2/Executing_3_Console_Apps.PNG)
+
+## X. Modify the MathServices Project and add it to the ProgramStructureDemoV3 Project
+
+### X.X. Modify the MathServices Project
+
+```vb
+Public Class Maths
+    Public Shared MaxValue As Integer = 100
+
+    Public Function AddNumbers(a As Integer, b As Integer) As Integer
+        Return a + b
+    End Function
+
+    Public Shared Function AddNumbersV1(a As Integer, b As Integer) As Integer
+        Return a + b
+    End Function
+End Class
+```
+
+### X.X. Add the MathServices Project to the ProgramStructureDemoV3 Project
+
+```powershell
+dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServices\MathServices.vbproj
+```
+
+OR
+
+```xml
+  <ItemGroup>
+    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+  </ItemGroup>
+```
+
+![Add Project Reference |150x150](./images/S2/Add_Project_Reference.PNG)
+
+## X. Modify the ProgramStructureDemoV3 Project and Execute
+
+### X.X. Modify the ProgramStructureDemoV3 Project
 
 ```csharp
-using System;
-using System.Runtime.CompilerServices;
+using MathServices.MathLibrary;
 
-[CompilerGenerated]
-internal class Program
-{
-    private static void <Main>$(string[] args)
-    {
-        Console.WriteLine("Hello, World!");
-    }
-}
+Console.ForegroundColor = ConsoleColor.Yellow;
+
+Console.WriteLine("Hello .NET 8 World!"); /* This is a statement and it ends with semi colon. */
+
+Console.WriteLine("Enter your name: ");
+var name = Console.ReadLine();
+Console.WriteLine($"Hello {name}!");
+
+int num1 = 10, num2 = 20; /* Variable declaration and initialization. */
+Maths maths = new(); /* Instantiation of Maths class. */
+Console.WriteLine($"{num1} + {num2} = {maths.AddNumbers(num1, num2)}");
+
+/* Accessing static members of a class. */
+Console.WriteLine($"{num1} + {num2} = {Maths.AddNumbersV1(num1, num2)}");
+Console.WriteLine($"Max value is {Maths.MaxValue}");
+
+Console.ResetColor();
+
+/* The dot operator (.) is used to access members of a namespace, type, or object. */
+Console.WriteLine("Press any key to exit.");
+Console.ReadKey();
 ```
 
-![Demo 2 |150x150](./images/1/demo2.PNG)
+### X.X. Execute the ProgramStructureDemoV3 Project
 
-## 7. SUMMARY / RECAP / Q&A
+```powershell
+dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
+```
+
+![Executing CSProj with VB.Net Library |150x150](./images/S2/Executing_CSProj_with_VBLibrary.PNG)
+
+## X. SUMMARY / RECAP / Q&A
 
 > 1. Discussion and Demo
 
 ---
 
-## 8. What is next ?
+## X. What is next?
 
-> 1. What is .NET?
-> 1. .NET CLR basics
-> 1. C# Language
-> 1. Basic .NET CLI commands
-> 1. Few Terms
+> 1. Introduction to Variables
+> 1. Showing Compiler Version `#error version`
+> 1. ilDasm Demo
 > 1. `Global namespace imports` feature
 > 1. `File-scoped namespaces` feature
+> 1. Common Language Infrastructure (CLI)
+> 1. Creating a Console Application with .NET (6/7/8)
+> 1. Creating a Console Application with global.json inside folder
 > 1. Importing Namespaces
-> 1. Workspace
 > 1. Notification Icon
 > 1. Multiple Projects
+> 1. SUMMARY / RECAP / Q&A
+> 1. What is next?
