--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -4,6 +4,8 @@
 
 ## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
 
+## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
+
 ![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
@@ -282,6 +284,8 @@ Console.ReadKey();
 ## 11. Viewing the `<Main>$()` method
 
 > 1. Discussion and Demo
+
+### 11.1. Compiler Generated Code `<Main>$()` method
 
 ```csharp
 using System;
