--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -4,6 +4,8 @@
 
 ## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
 
+## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
+
 ![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
@@ -38,17 +40,23 @@ dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 
 ### X.X. Create New Console Project, Class Library (VB) and them to the solution S2
 
+#### Creating a New Console Project
+
 ```powershell
 dotnet new console -o ProgramStructureDemoV3
 dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
+```
 
+#### Creating a New Class Library (VB)
+
+```powershell
 dotnet new classlib -o MathServices --language VB
 dotnet sln add .\MathServices\MathServices.vbproj
 ```
 
 ![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
 
-### X.X. Execute the Project(s)
+### X.X. Executing three Console Project(s)
 
 ```powershell
 dotnet build
@@ -62,25 +70,27 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing 3 Projects |150x150](./images/S2/Executing_3_Console_Apps.PNG)
 
-## X. Modify the MathServices Project and add it to the ProgramStructureDemoV3 Project
+## X. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
 
-### X.X. Modify the MathServices Project
+### X.X. Modify the MathServices Library
 
 ```vb
-Public Class Maths
-    Public Shared MaxValue As Integer = 100
+Namespace MathLibrary
+    Public Class Maths
+        Public Shared MaxValue As Integer = 100
 
-    Public Function AddNumbers(a As Integer, b As Integer) As Integer
-        Return a + b
-    End Function
+        Public Function AddNumbers(a As Integer, b As Integer) As Integer
+            Return a + b
+        End Function
 
-    Public Shared Function AddNumbersV1(a As Integer, b As Integer) As Integer
-        Return a + b
-    End Function
-End Class
+        Public Shared Function AddNumbersV1(a As Integer, b As Integer) As Integer
+            Return a + b
+        End Function
+    End Class
+End Namespace
 ```
 
-### X.X. Add the MathServices Project to the ProgramStructureDemoV3 Project
+### X.X. Add MathServices Library reference to the ProgramStructureDemoV3 Project
 
 ```powershell
 dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServices\MathServices.vbproj
@@ -101,6 +111,9 @@ OR
 ### X.X. Modify the ProgramStructureDemoV3 Project
 
 ```csharp
+/* 
+    Using VB.NET style namespace aliasing. We are using VB.NET Library in this C# program.
+*/
 using MathServices.MathLibrary;
 
 Console.ForegroundColor = ConsoleColor.Yellow;
