--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -38,16 +38,16 @@ dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 
 ![Projects And Solution |150x150](./images/S2/S2_With_Old_Projects.PNG)
 
-### X.X. Create New Console Project, Class Library (VB) and them to the solution S2
+## X. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
 
-#### Creating a New Console Project
+### X.X. Creating a New Console Project (C#) and add it to the solution S2
 
 ```powershell
 dotnet new console -o ProgramStructureDemoV3
 dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ```
 
-#### Creating a New Class Library (VB)
+### X.X. Creating a New Class Library (VB) and add it to the solution S2
 
 ```powershell
 dotnet new classlib -o MathServices --language VB
@@ -56,7 +56,7 @@ dotnet sln add .\MathServices\MathServices.vbproj
 
 ![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
 
-### X.X. Executing three Console Project(s)
+## X. Executing three Console Project(s)
 
 ```powershell
 dotnet build
