--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -1,8 +1,8 @@
 # C# Fundamentals - Part of Microservices Series - Session 1 of 120
 
-## Date: 14-Aug-2023
+## Date: 28-Aug-2023
 
-## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
+## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980994](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980994)
 
 ## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
@@ -20,15 +20,17 @@
 
 ---
 
-## X. Preparing Folder, Solution, Project(s)
+## 1. Preparing Folder, Solution, Project(s)
 
-### X.X. Create Solution
+> 1. Discussion and demo
+
+### 1.1. Create a New Solution
 
 ```powershell
 dotnet new sln -n S2
 ```
 
-### X.X. Copy two projects from S1 folder to S2 folder and add them to the solution
+### 1.2. Copy two existings projects from S1 folder to S2 folder and add them to the solution
 
 ```powershell
 dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
@@ -38,16 +40,18 @@ dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 
 ![Projects And Solution |150x150](./images/S2/S2_With_Old_Projects.PNG)
 
-## X. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
+## 2. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
 
-### X.X. Creating a New Console Project (C#) and add it to the solution S2
+> 1. Discussion and demo
+
+### 2.1. Creating a New Console Project (C#) and add it to the solution S2
 
 ```powershell
 dotnet new console -o ProgramStructureDemoV3
 dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ```
 
-### X.X. Creating a New Class Library (VB) and add it to the solution S2
+### 2.2. Creating a New Class Library (VB) and add it to the solution S2
 
 ```powershell
 dotnet new classlib -o MathServices --language VB
@@ -56,7 +60,9 @@ dotnet sln add .\MathServices\MathServices.vbproj
 
 ![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
 
-## X. Executing three Console Project(s)
+## 3. Executing three Console Project(s)
+
+> 1. Discussion and demo
 
 ```powershell
 dotnet build
@@ -70,9 +76,11 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing 3 Projects |150x150](./images/S2/Executing_3_Console_Apps.PNG)
 
-## X. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
+## 4. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
 
-### X.X. Modify the MathServices Library
+> 1. Discussion and demo
+
+### 4.1. Modify the MathServices Library
 
 ```vb
 Namespace MathLibrary
@@ -90,7 +98,7 @@ Namespace MathLibrary
 End Namespace
 ```
 
-### X.X. Add MathServices Library reference to the ProgramStructureDemoV3 Project
+### 4.2. Add MathServices Library reference to the ProgramStructureDemoV3 Project
 
 ```powershell
 dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServices\MathServices.vbproj
@@ -106,9 +114,11 @@ OR
 
 ![Add Project Reference |150x150](./images/S2/Add_Project_Reference.PNG)
 
-## X. Modify the ProgramStructureDemoV3 Project and Execute
+## 5. Modify the ProgramStructureDemoV3 Project and Execute
 
-### X.X. Modify the ProgramStructureDemoV3 Project
+> 1. Discussion and demo
+
+### 5.1. Modify the ProgramStructureDemoV3 Project
 
 ```csharp
 /* 
@@ -139,13 +149,40 @@ Console.WriteLine("Press any key to exit.");
 Console.ReadKey();
 ```
 
-### X.X. Execute the ProgramStructureDemoV3 Project
+### 5.2. Execute the ProgramStructureDemoV3 Project
 
 ```powershell
 dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ```
 
 ![Executing CSProj with VB.Net Library |150x150](./images/S2/Executing_CSProj_with_VBLibrary.PNG)
+
+## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/common-type-system)
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/language-independence](https://learn.microsoft.com/en-us/dotnet/standard/language-independence)
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
+> 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
+
+## 7. Dive into understanding "What is Common Language Infrastructure?"
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
+
+## 8. Dive into understanding "JIT Compilation" Process
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
 ## X. SUMMARY / RECAP / Q&A
 
