--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -10,7 +10,22 @@
 
 ## Agenda for this session
 
-> 1. To be decided
+> 1. Preparing Folder, Solution, Project(s)
+> 1. - Create a New Solution
+> 1. - Copy two existings projects from S1 folder to S2 folder and add them to the solution
+> 1. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
+> 1. - Creating a New Console Project (C#) and add it to the solution S2
+> 1. - Creating a New Class Library (VB) and add it to the solution S2
+> 1. Executing three Console Project(s)
+> 1. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
+> 1. - Modify the MathServices Library
+> 1. - Add MathServices Library reference to the ProgramStructureDemoV3 Project
+> 1. Modify the ProgramStructureDemoV3 Project and Execute
+> 1. - Modify the ProgramStructureDemoV3 Project
+> 1. - Execute the ProgramStructureDemoV3 Project
+> 1. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+> 1. Dive into understanding "What is Common Language Infrastructure?"
+> 1. Dive into understanding "JIT Compilation" Process
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
 
