Swamy/15aug coding (#29)
* Update S1.md

* Changes

* Changes

* Update S2.md

* Update S2.md

* Changes

--- a/documentation/S1.md
+++ b/documentation/S1.md
@@ -4,6 +4,8 @@
 
 ## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
 
+## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
+
 ![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
@@ -283,6 +285,8 @@ Console.ReadKey();
 
 > 1. Discussion and Demo
 
+### 11.1. Compiler Generated Code `<Main>$()` method
+
 ```csharp
 using System;
 using System.Runtime.CompilerServices;
@@ -307,16 +311,21 @@ internal class Program
 
 ## X. What is next?
 
-> 1. Introduction to Variables
-> 1. Showing Compiler Version `#error version`
-> 1. ilDasm Demo
-> 1. `Global namespace imports` feature
-> 1. `File-scoped namespaces` feature
-> 1. Common Language Infrastructure (CLI)
-> 1. Creating a Console Application with .NET (6/7/8)
-> 1. Creating a Console Application with global.json inside folder
-> 1. Importing Namespaces
-> 1. Notification Icon
-> 1. Multiple Projects
+> 1. Preparing Folder, Solution, Project(s)
+> 1. - Create a New Solution
+> 1. - Copy two existings projects from S1 folder to S2 folder and add them to the solution
+> 1. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
+> 1. - Creating a New Console Project (C#) and add it to the solution S2
+> 1. - Creating a New Class Library (VB) and add it to the solution S2
+> 1. Executing three Console Project(s)
+> 1. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
+> 1. - Modify the MathServices Library
+> 1. - Add MathServices Library reference to the ProgramStructureDemoV3 Project
+> 1. Modify the ProgramStructureDemoV3 Project and Execute
+> 1. - Modify the ProgramStructureDemoV3 Project
+> 1. - Execute the ProgramStructureDemoV3 Project
+> 1. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+> 1. Dive into understanding "What is Common Language Infrastructure?"
+> 1. Dive into understanding "JIT Compilation" Process
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
