--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -1,14 +1,31 @@
 # C# Fundamentals - Part of Microservices Series - Session 1 of 120
 
-## Date: 14-Aug-2023
+## Date: 28-Aug-2023
 
-## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980880)
+## Event URL: [https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980994](https://www.meetup.com/dot-net-learners-house-hyderabad/events/294980994)
+
+## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
 ![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
 
-> 1. To be decided
+> 1. Preparing Folder, Solution, Project(s)
+> 1. - Create a New Solution
+> 1. - Copy two existings projects from S1 folder to S2 folder and add them to the solution
+> 1. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
+> 1. - Creating a New Console Project (C#) and add it to the solution S2
+> 1. - Creating a New Class Library (VB) and add it to the solution S2
+> 1. Executing three Console Project(s)
+> 1. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
+> 1. - Modify the MathServices Library
+> 1. - Add MathServices Library reference to the ProgramStructureDemoV3 Project
+> 1. Modify the ProgramStructureDemoV3 Project and Execute
+> 1. - Modify the ProgramStructureDemoV3 Project
+> 1. - Execute the ProgramStructureDemoV3 Project
+> 1. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+> 1. Dive into understanding "What is Common Language Infrastructure?"
+> 1. Dive into understanding "JIT Compilation" Process
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
 
@@ -18,15 +35,17 @@
 
 ---
 
-## X. Preparing Folder, Solution, Project(s)
+## 1. Preparing Folder, Solution, Project(s)
 
-### X.X. Create Solution
+> 1. Discussion and demo
+
+### 1.1. Create a New Solution
 
 ```powershell
 dotnet new sln -n S2
 ```
 
-### X.X. Copy two projects from S1 folder to S2 folder and add them to the solution
+### 1.2. Copy two existings projects from S1 folder to S2 folder and add them to the solution
 
 ```powershell
 dotnet sln add .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
@@ -36,19 +55,29 @@ dotnet sln add .\ProgramStructureDemoV2\ProgramStructureDemoV2.csproj
 
 ![Projects And Solution |150x150](./images/S2/S2_With_Old_Projects.PNG)
 
-### X.X. Create New Console Project, Class Library (VB) and them to the solution S2
+## 2. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
+
+> 1. Discussion and demo
+
+### 2.1. Creating a New Console Project (C#) and add it to the solution S2
 
 ```powershell
 dotnet new console -o ProgramStructureDemoV3
 dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
+```
 
+### 2.2. Creating a New Class Library (VB) and add it to the solution S2
+
+```powershell
 dotnet new classlib -o MathServices --language VB
 dotnet sln add .\MathServices\MathServices.vbproj
 ```
 
 ![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
 
-### X.X. Execute the Project(s)
+## 3. Executing three Console Project(s)
+
+> 1. Discussion and demo
 
 ```powershell
 dotnet build
@@ -62,25 +91,29 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing 3 Projects |150x150](./images/S2/Executing_3_Console_Apps.PNG)
 
-## X. Modify the MathServices Project and add it to the ProgramStructureDemoV3 Project
+## 4. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
 
-### X.X. Modify the MathServices Project
+> 1. Discussion and demo
+
+### 4.1. Modify the MathServices Library
 
 ```vb
-Public Class Maths
-    Public Shared MaxValue As Integer = 100
+Namespace MathLibrary
+    Public Class Maths
+        Public Shared MaxValue As Integer = 100
 
-    Public Function AddNumbers(a As Integer, b As Integer) As Integer
-        Return a + b
-    End Function
+        Public Function AddNumbers(a As Integer, b As Integer) As Integer
+            Return a + b
+        End Function
 
-    Public Shared Function AddNumbersV1(a As Integer, b As Integer) As Integer
-        Return a + b
-    End Function
-End Class
+        Public Shared Function AddNumbersV1(a As Integer, b As Integer) As Integer
+            Return a + b
+        End Function
+    End Class
+End Namespace
 ```
 
-### X.X. Add the MathServices Project to the ProgramStructureDemoV3 Project
+### 4.2. Add MathServices Library reference to the ProgramStructureDemoV3 Project
 
 ```powershell
 dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServices\MathServices.vbproj
@@ -96,11 +129,16 @@ OR
 
 ![Add Project Reference |150x150](./images/S2/Add_Project_Reference.PNG)
 
-## X. Modify the ProgramStructureDemoV3 Project and Execute
+## 5. Modify the ProgramStructureDemoV3 Project and Execute
 
-### X.X. Modify the ProgramStructureDemoV3 Project
+> 1. Discussion and demo
+
+### 5.1. Modify the ProgramStructureDemoV3 Project
 
 ```csharp
+/* 
+    Using VB.NET style namespace aliasing. We are using VB.NET Library in this C# program.
+*/
 using MathServices.MathLibrary;
 
 Console.ForegroundColor = ConsoleColor.Yellow;
@@ -126,13 +164,40 @@ Console.WriteLine("Press any key to exit.");
 Console.ReadKey();
 ```
 
-### X.X. Execute the ProgramStructureDemoV3 Project
+### 5.2. Execute the ProgramStructureDemoV3 Project
 
 ```powershell
 dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ```
 
 ![Executing CSProj with VB.Net Library |150x150](./images/S2/Executing_CSProj_with_VBLibrary.PNG)
+
+## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/common-type-system)
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/language-independence](https://learn.microsoft.com/en-us/dotnet/standard/language-independence)
+> 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
+> 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
+
+## 7. Dive into understanding "What is Common Language Infrastructure?"
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
+
+## 8. Dive into understanding "JIT Compilation" Process
+
+> 1. Discussion and demo
+
+**Reference(s):**
+
+> 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
 ## X. SUMMARY / RECAP / Q&A
 
