--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -172,6 +172,16 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing CSProj with VB.Net Library |150x150](./images/S2/Executing_CSProj_with_VBLibrary.PNG)
 
+## 6. Creating a New Class Library (C#)
+
+```powershell
+dotnet new classlib -o MathServicesCSLib
+dotnet sln add .\MathServicesCSLib\MathServicesCSLib.csproj
+```
+
+![Math Service CS Library |150x150](./images/S2/MathServiceCSLib.PNG)
+
+
 ## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
