--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -181,6 +181,39 @@ dotnet sln add .\MathServicesCSLib\MathServicesCSLib.csproj
 
 ![Math Service CS Library |150x150](./images/S2/MathServiceCSLib.PNG)
 
+### 6.1. Update the code of MathServicesCSLib
+
+```cs
+namespace MathServicesCSLib;
+
+public class Maths
+{
+    public static int MaxValue = 100;
+
+    public int AddNumbers(int a, int b)
+    {
+        return a + b;
+    }
+
+    public static int AddNumbersV1(int a, int b) => a + b;
+}
+```
+
+### 6.2. Add MathServicesCSLib Library reference to the ProgramStructureDemoV3 Project
+
+```powershell
+dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServicesCSLib\MathServicesCSLib.csproj
+```
+
+OR
+
+```xml
+  <ItemGroup>
+    <ProjectReference Include="..\MathServicesCSLib\MathServicesCSLib.csproj" />
+  </ItemGroup>
+```
+
+![Add Project Reference |150x150](./images/S2/Add_Project_Reference.PNG)
 
 ## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
