--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -209,11 +209,18 @@ OR
 
 ```xml
   <ItemGroup>
+    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
     <ProjectReference Include="..\MathServicesCSLib\MathServicesCSLib.csproj" />
   </ItemGroup>
 ```
 
-![Add Project Reference |150x150](./images/S2/Add_Project_Reference.PNG)
+### 6.3. Execute the ProgramStructureDemoV3 Project
+
+```powershell
+dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
+```
+
+![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
 
 ## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
