--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -257,16 +257,15 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ## X. What is next?
 
-> 1. Introduction to Variables
-> 1. Showing Compiler Version `#error version`
 > 1. ilDasm Demo
+> 1. Dive into understanding "JIT Compilation" Process
+> 1. Showing Compiler Version `#error version`
+> 1. Introduction to Variables
 > 1. `Global namespace imports` feature
 > 1. `File-scoped namespaces` feature
-> 1. Common Language Infrastructure (CLI)
 > 1. Creating a Console Application with .NET (6/7/8)
 > 1. Creating a Console Application with global.json inside folder
 > 1. Importing Namespaces
-> 1. Notification Icon
 > 1. Multiple Projects
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
