--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -172,6 +172,56 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing CSProj with VB.Net Library |150x150](./images/S2/Executing_CSProj_with_VBLibrary.PNG)
 
+## 6. Creating a New Class Library (C#)
+
+```powershell
+dotnet new classlib -o MathServicesCSLib
+dotnet sln add .\MathServicesCSLib\MathServicesCSLib.csproj
+```
+
+![Math Service CS Library |150x150](./images/S2/MathServiceCSLib.PNG)
+
+### 6.1. Update the code of MathServicesCSLib
+
+```cs
+namespace MathServicesCSLib;
+
+public class Maths
+{
+    public static int MaxValue = 100;
+
+    public int AddNumbers(int a, int b)
+    {
+        return a + b;
+    }
+
+    public static int AddNumbersV1(int a, int b) => a + b;
+}
+```
+
+### 6.2. Add MathServicesCSLib Library reference to the ProgramStructureDemoV3 Project
+
+```powershell
+dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServicesCSLib\MathServicesCSLib.csproj
+```
+
+OR
+
+```xml
+  <ItemGroup>
+    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+    <ProjectReference Include="..\MathServicesCSLib\MathServicesCSLib.csproj" />
+  </ItemGroup>
+```
+
+### 6.3. Execute the ProgramStructureDemoV3 Project
+
+```powershell
+dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
+```
+
+![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
+
 ## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
@@ -207,16 +257,15 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ## X. What is next?
 
-> 1. Introduction to Variables
-> 1. Showing Compiler Version `#error version`
 > 1. ilDasm Demo
+> 1. Dive into understanding "JIT Compilation" Process
+> 1. Showing Compiler Version `#error version`
+> 1. Introduction to Variables
 > 1. `Global namespace imports` feature
 > 1. `File-scoped namespaces` feature
-> 1. Common Language Infrastructure (CLI)
 > 1. Creating a Console Application with .NET (6/7/8)
 > 1. Creating a Console Application with global.json inside folder
 > 1. Importing Namespaces
-> 1. Notification Icon
 > 1. Multiple Projects
 > 1. SUMMARY / RECAP / Q&A
 > 1. What is next?
