--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -17,9 +17,9 @@
 > 1. - Creating a New Console Project (C#) and add it to the solution S2
 > 1. - Creating a New Class Library (VB) and add it to the solution S2
 > 1. Executing three Console Project(s)
-> 1. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
-> 1. - Modify the MathServices Library
-> 1. - Add MathServices Library reference to the ProgramStructureDemoV3 Project
+> 1. Modify the MathServicesVBLib Library and add it to the ProgramStructureDemoV3 Project
+> 1. - Modify the MathServicesVBLib Library
+> 1. - Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project
 > 1. Modify the ProgramStructureDemoV3 Project and Execute
 > 1. - Modify the ProgramStructureDemoV3 Project
 > 1. - Execute the ProgramStructureDemoV3 Project
@@ -69,8 +69,8 @@ dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ### 2.2. Creating a New Class Library (VB) and add it to the solution S2
 
 ```powershell
-dotnet new classlib -o MathServices --language VB
-dotnet sln add .\MathServices\MathServices.vbproj
+dotnet new classlib -o MathServicesVBLib --language VB
+dotnet sln add .\MathServicesVBLib\MathServicesVBLib.vbproj
 ```
 
 ![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
@@ -91,11 +91,11 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing 3 Projects |150x150](./images/S2/Executing_3_Console_Apps.PNG)
 
-## 4. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
+## 4. Modify the MathServicesVBLib Library and add it to the ProgramStructureDemoV3 Project
 
 > 1. Discussion and demo
 
-### 4.1. Modify the MathServices Library
+### 4.1. Modify the MathServicesVBLib Library
 
 ```vb
 Namespace MathLibrary
@@ -113,17 +113,17 @@ Namespace MathLibrary
 End Namespace
 ```
 
-### 4.2. Add MathServices Library reference to the ProgramStructureDemoV3 Project
+### 4.2. Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project
 
 ```powershell
-dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServices\MathServices.vbproj
+dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServicesVBLib\MathServicesVBLib.vbproj
 ```
 
 OR
 
 ```xml
   <ItemGroup>
-    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+    <ProjectReference Include="..\MathServicesVBLib\MathServicesVBLib.vbproj" />
   </ItemGroup>
 ```
 
@@ -139,7 +139,7 @@ OR
 /* 
     Using VB.NET style namespace aliasing. We are using VB.NET Library in this C# program.
 */
-using MathServices.MathLibrary;
+using MathServicesVBLib.MathLibrary;
 
 Console.ForegroundColor = ConsoleColor.Yellow;
 
@@ -209,7 +209,7 @@ OR
 
 ```xml
   <ItemGroup>
-    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+    <ProjectReference Include="..\MathServicesVBLib\MathServicesVBLib.vbproj" />
     <ProjectReference Include="..\MathServicesCSLib\MathServicesCSLib.csproj" />
   </ItemGroup>
 ```
