--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -136,7 +136,7 @@ OR
 ### 5.1. Modify the ProgramStructureDemoV3 Project
 
 ```csharp
-/* 
+/*
     Using VB.NET style namespace aliasing. We are using VB.NET Library in this C# program.
 */
 using MathServicesVBLib.MathLibrary;
@@ -222,7 +222,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
 
-## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+## 6. Understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
 
@@ -233,7 +233,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 
-## 7. Dive into understanding "What is Common Language Infrastructure?"
+## 7. Understanding "What is Common Language Infrastructure?"
 
 > 1. Discussion and demo
 
@@ -241,7 +241,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-## 8. Dive into understanding "JIT Compilation" Process
+## 8. Understanding "JIT Compilation" Process
 
 > 1. Discussion and demo
 
