--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -17,9 +17,9 @@
 > 1. - Creating a New Console Project (C#) and add it to the solution S2
 > 1. - Creating a New Class Library (VB) and add it to the solution S2
 > 1. Executing three Console Project(s)
-> 1. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
-> 1. - Modify the MathServices Library
-> 1. - Add MathServices Library reference to the ProgramStructureDemoV3 Project
+> 1. Modify the MathServicesVBLib Library and add it to the ProgramStructureDemoV3 Project
+> 1. - Modify the MathServicesVBLib Library
+> 1. - Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project
 > 1. Modify the ProgramStructureDemoV3 Project and Execute
 > 1. - Modify the ProgramStructureDemoV3 Project
 > 1. - Execute the ProgramStructureDemoV3 Project
@@ -69,8 +69,8 @@ dotnet sln add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ### 2.2. Creating a New Class Library (VB) and add it to the solution S2
 
 ```powershell
-dotnet new classlib -o MathServices --language VB
-dotnet sln add .\MathServices\MathServices.vbproj
+dotnet new classlib -o MathServicesVBLib --language VB
+dotnet sln add .\MathServicesVBLib\MathServicesVBLib.vbproj
 ```
 
 ![S2 with Two New Projects |150x150](./images/S2/S2_With_Two_New_Projects.PNG)
@@ -91,11 +91,11 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing 3 Projects |150x150](./images/S2/Executing_3_Console_Apps.PNG)
 
-## 4. Modify the MathServices Library and add it to the ProgramStructureDemoV3 Project
+## 4. Modify the MathServicesVBLib Library and add it to the ProgramStructureDemoV3 Project
 
 > 1. Discussion and demo
 
-### 4.1. Modify the MathServices Library
+### 4.1. Modify the MathServicesVBLib Library
 
 ```vb
 Namespace MathLibrary
@@ -113,17 +113,17 @@ Namespace MathLibrary
 End Namespace
 ```
 
-### 4.2. Add MathServices Library reference to the ProgramStructureDemoV3 Project
+### 4.2. Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project
 
 ```powershell
-dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServices\MathServices.vbproj
+dotnet add .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj reference .\MathServicesVBLib\MathServicesVBLib.vbproj
 ```
 
 OR
 
 ```xml
   <ItemGroup>
-    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+    <ProjectReference Include="..\MathServicesVBLib\MathServicesVBLib.vbproj" />
   </ItemGroup>
 ```
 
@@ -136,10 +136,10 @@ OR
 ### 5.1. Modify the ProgramStructureDemoV3 Project
 
 ```csharp
-/* 
+/*
     Using VB.NET style namespace aliasing. We are using VB.NET Library in this C# program.
 */
-using MathServices.MathLibrary;
+using MathServicesVBLib.MathLibrary;
 
 Console.ForegroundColor = ConsoleColor.Yellow;
 
@@ -209,7 +209,7 @@ OR
 
 ```xml
   <ItemGroup>
-    <ProjectReference Include="..\MathServices\MathServices.vbproj" />
+    <ProjectReference Include="..\MathServicesVBLib\MathServicesVBLib.vbproj" />
     <ProjectReference Include="..\MathServicesCSLib\MathServicesCSLib.csproj" />
   </ItemGroup>
 ```
@@ -222,7 +222,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
 
-## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+## 6. Understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
 
@@ -233,7 +233,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 
-## 7. Dive into understanding "What is Common Language Infrastructure?"
+## 7. Understanding "What is Common Language Infrastructure?"
 
 > 1. Discussion and demo
 
@@ -241,7 +241,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-## 8. Dive into understanding "JIT Compilation" Process
+## 8. Understanding "JIT Compilation" Process
 
 > 1. Discussion and demo
 
