--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -222,7 +222,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
 
-## 6. Understanding "How it was possible to use VB.NET Library in C# Project?"
+## 6. 30,000 foot view of "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
 
@@ -233,7 +233,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 
-## 7. Understanding "What is Common Language Infrastructure?"
+## 7. 30,000 foot view of "What is Common Language Infrastructure?"
 
 > 1. Discussion and demo
 
