--- a/documentation/S3.md
+++ b/documentation/S3.md
@@ -14,7 +14,7 @@
 
 ---
 
-## 6. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
+## X. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
 
@@ -25,7 +25,7 @@
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 
-## 7. Dive into understanding "What is Common Language Infrastructure?"
+## X. Dive into understanding "What is Common Language Infrastructure?"
 
 > 1. Discussion and demo
 
@@ -33,7 +33,7 @@
 
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-## 8. Dive into understanding "JIT Compilation" Process
+## X. Dive into understanding "JIT Compilation" Process
 
 > 1. Discussion and demo
 
