--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -10,19 +10,19 @@
 
 ## Agenda for this session
 
-> 1. Preparing Folder, Solution, Project(s)
-> 1. - Create a New Solution
-> 1. - Copy two existings projects from S1 folder to S2 folder and add them to the solution
+> 1. [Preparing Folder, Solution, Project(s)](#1-preparing-folder-solution-projects)
+>    - [Create a New Solution](#11-create-a-new-solution)
+>    - [Copy two existings projects from S1 folder to S2 folder and add them to the solution](#12-copy-two-existings-projects-from-s1-folder-to-s2-folder-and-add-them-to-the-solution)
 > 1. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
-> 1. - Creating a New Console Project (C#) and add it to the solution S2
-> 1. - Creating a New Class Library (VB) and add it to the solution S2
+>    - Creating a New Console Project (C#) and add it to the solution S2
+>    - Creating a New Class Library (VB) and add it to the solution S2
 > 1. Executing three Console Project(s)
 > 1. Modify the MathServicesVBLib Library and add it to the ProgramStructureDemoV3 Project
-> 1. - Modify the MathServicesVBLib Library
-> 1. - Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project
+>    - Modify the MathServicesVBLib Library
+>    - Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project
 > 1. Modify the ProgramStructureDemoV3 Project and Execute
-> 1. - Modify the ProgramStructureDemoV3 Project
-> 1. - Execute the ProgramStructureDemoV3 Project
+>    - Modify the ProgramStructureDemoV3 Project
+>    - Execute the ProgramStructureDemoV3 Project
 > 1. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
 > 1. Dive into understanding "What is Common Language Infrastructure?"
 > 1. Dive into understanding "JIT Compilation" Process
@@ -80,6 +80,10 @@ dotnet sln add .\MathServicesVBLib\MathServicesVBLib.vbproj
 > 1. Discussion and demo
 
 ```powershell
+dotnet clean
+
+dotnet restore
+
 dotnet build
 
 dotnet run --project .\ProgramStructureDemoV1\ProgramStructureDemoV1.csproj
@@ -222,7 +226,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
 
-## 6. 30,000 foot view of "How it was possible to use VB.NET Library in C# Project?"
+## 7. 30,000 foot view of "How it was possible to use VB.NET Library in C# Project?"
 
 > 1. Discussion and demo
 
@@ -233,7 +237,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 > 1. [https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system](https://learn.microsoft.com/en-us/dotnet/standard/base-types/common-type-system)
 > 1. [https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0](https://learn.microsoft.com/en-us/dotnet/api/system.int32?view=net-7.0)
 
-## 7. 30,000 foot view of "What is Common Language Infrastructure?"
+## 8. 30,000 foot view of "What is Common Language Infrastructure?"
 
 > 1. Discussion and demo
 
@@ -241,7 +245,7 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 > 1. [https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations](https://en.wikipedia.org/wiki/Common_Language_Infrastructure#Implementations)
 
-## 8. Understanding "JIT Compilation" Process
+## 9. 30,000 foot view of "JIT Compilation" Process
 
 > 1. Discussion and demo
 
@@ -257,8 +261,8 @@ dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 
 ## X. What is next?
 
-> 1. ilDasm Demo
-> 1. Dive into understanding "JIT Compilation" Process
+> 1. Dive into "How it was possible to use VB.NET Library in C# Project?"
+> 1. Dive into "JIT Compilation" Process
 > 1. Showing Compiler Version `#error version`
 > 1. Introduction to Variables
 > 1. `Global namespace imports` feature
