--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -13,21 +13,25 @@
 > 1. [Preparing Folder, Solution, Project(s)](#1-preparing-folder-solution-projects)
 >    - [Create a New Solution](#11-create-a-new-solution)
 >    - [Copy two existings projects from S1 folder to S2 folder and add them to the solution](#12-copy-two-existings-projects-from-s1-folder-to-s2-folder-and-add-them-to-the-solution)
-> 1. Create a New Console Project (C#), Class Library (VB) and them to the solution S2
->    - Creating a New Console Project (C#) and add it to the solution S2
->    - Creating a New Class Library (VB) and add it to the solution S2
-> 1. Executing three Console Project(s)
-> 1. Modify the MathServicesVBLib Library and add it to the ProgramStructureDemoV3 Project
->    - Modify the MathServicesVBLib Library
->    - Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project
-> 1. Modify the ProgramStructureDemoV3 Project and Execute
->    - Modify the ProgramStructureDemoV3 Project
->    - Execute the ProgramStructureDemoV3 Project
-> 1. Dive into understanding "How it was possible to use VB.NET Library in C# Project?"
-> 1. Dive into understanding "What is Common Language Infrastructure?"
-> 1. Dive into understanding "JIT Compilation" Process
-> 1. SUMMARY / RECAP / Q&A
-> 1. What is next?
+> 1. [Create a New Console Project (C#), Class Library (VB) and them to the solution S2](#2-create-a-new-console-project-c-class-library-vb-and-them-to-the-solution-s2)
+>    - [Creating a New Console Project (C#) and add it to the solution S2](#21-creating-a-new-console-project-c-and-add-it-to-the-solution-s2)
+>    - [Creating a New Class Library (VB) and add it to the solution S2](#22-creating-a-new-class-library-vb-and-add-it-to-the-solution-s2)
+> 1. [Executing three Console Project(s)](#3-executing-three-console-projects)
+> 1. [Modify the MathServicesVBLib Library and add it to the ProgramStructureDemoV3 Project](#4-modify-the-mathservicesvblib-library-and-add-it-to-the-programstructuredemov3-project)
+>    - [Modify the MathServicesVBLib Library](#41-modify-the-mathservicesvblib-library)
+>    - [Add MathServicesVBLib Library reference to the ProgramStructureDemoV3 Project](#42-add-mathservicesvblib-library-reference-to-the-programstructuredemov3-project)
+> 1. [Modify the ProgramStructureDemoV3 Project and Execute](#5-modify-the-programstructuredemov3-project-and-execute)
+>    - [Modify the ProgramStructureDemoV3 Project](#51-modify-the-programstructuredemov3-project)
+>    - [Execute the ProgramStructureDemoV3 Project](#52-execute-the-programstructuredemov3-project)
+> 1. [Creating a New Class Library (C#)](#6-creating-a-new-class-library-c)
+>    - [Update the code of MathServicesCSLib](#61-update-the-code-of-mathservicescslib)
+>    - [Add MathServicesCSLib Library reference to the ProgramStructureDemoV3 Project](#62-add-mathservicescslib-library-reference-to-the-programstructuredemov3-project)
+>    - [Execute the ProgramStructureDemoV3 Project](#63-execute-the-programstructuredemov3-project)
+> 1. [30,000 foot view of "How it was possible to use VB.NET Library in C# Project?"](#7-30000-foot-view-of-how-it-was-possible-to-use-vbnet-library-in-c-project)
+> 1. [30,000 foot view of "What is Common Language Infrastructure?"](#8-30000-foot-view-of-what-is-common-language-infrastructure)
+> 1. [30,000 foot view of "JIT Compilation" Process](#9-30000-foot-view-of-jit-compilation-process)
+> 1. [SUMMARY / RECAP / Q&A](#x-summary--recap--qa)
+> 1. [What is next?](#x-what-is-next)
 
 ---
 
