--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -1,4 +1,4 @@
-# C# Fundamentals - Part of Microservices Series - Session 1 of 120
+# C# Fundamentals - Part of Microservices Series Session 2 of 120
 
 ## Date: 28-Aug-2023
 
