--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -1,4 +1,4 @@
-# C# Fundamentals - Part of Microservices Series Session 2 of 120
+# C# Fundamentals - Part of Microservices Series Session 2 / 120
 
 ## Date: 28-Aug-2023
 
@@ -6,7 +6,7 @@
 
 ## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
-![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
+![Viswanatha Swamy P K |150x150](./images/S2/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
 
