--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -194,7 +194,7 @@ dotnet sln add .\MathServicesCSLib\MathServicesCSLib.csproj
 ```cs
 namespace MathServicesCSLib;
 
-public class Maths
+public class MathsCS
 {
     public static int MaxValue = 100;
 
@@ -228,7 +228,7 @@ OR
 dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ```
 
-![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
+![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG)
 
 ## 7. 30,000 foot view of "How it was possible to use VB.NET Library in C# Project?"
 
