Swamy/27aug work (#35)
* Update S2.md

* Changes

* Changes

* Changes

--- a/documentation/S2.md
+++ b/documentation/S2.md
@@ -1,4 +1,4 @@
-# C# Fundamentals - Part of Microservices Series - Session 1 of 120
+# C# Fundamentals - Part of Microservices Series Session 2 / 120
 
 ## Date: 28-Aug-2023
 
@@ -6,7 +6,7 @@
 
 ## YouTube URL: [https://www.youtube.com/watch?v=VxMY7FMm_JQ](https://www.youtube.com/watch?v=VxMY7FMm_JQ)
 
-![Viswanatha Swamy P K |150x150](./images/S1/ViswanathaSwamyPK.PNG)
+![Viswanatha Swamy P K |150x150](./images/S2/ViswanathaSwamyPK.PNG)
 
 ## Agenda for this session
 
@@ -194,7 +194,7 @@ dotnet sln add .\MathServicesCSLib\MathServicesCSLib.csproj
 ```cs
 namespace MathServicesCSLib;
 
-public class Maths
+public class MathsCS
 {
     public static int MaxValue = 100;
 
@@ -228,7 +228,7 @@ OR
 dotnet run --project .\ProgramStructureDemoV3\ProgramStructureDemoV3.csproj
 ```
 
-![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG.jpg)
+![Executing CSProj with C# and VB.Net Library |150x150](./images/S2/Executing_CSProj_with_CS_VBLibrary.PNG)
 
 ## 7. 30,000 foot view of "How it was possible to use VB.NET Library in C# Project?"
 
